# ai_papers_scrapper

./: .dockerignore  .gitignore  .ruff.toml  Dockerfile  Makefile  README.md  openreview_scrapper.py  pyproject.toml  scrapy.cfg  start_here.sh
papers_scrapper/: items.py  middlewares.py  pipelines.py  settings.py
papers_scrapper/spiders/: aaai.py  acl.py  base_spider.py  eccv.py  ijcai.py  kdd.py  mlr_press.py  neurips.py  sigchi.py  siggraph.py  thecvf.py
