[tool.poetry]
name = "ai-papers-scrapper"
version = "0.1.0"
description = "Code to download papers from most important conferences on AI"
authors = ["George Araujo <george.gcac@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ai_papers_scrapper"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.6.3"
openreview-py = "^1.15.1"
pandas = "^1.5.2"
tqdm = "^4.64.1"
numpy = "<2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
